# demo-mcp

./: main.py  pyproject.toml  requirements.txt
