[project]
name = "testb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.2",
]

[tool.pyright]
exclude = [
  ".venv"
]
venvPath = "."
venv = ".venv"
reportUnusedCallResult = false
reportUnknownMemberType = false
